# liboptaudio

./: CHANGELOG.md  README.md  meson.build  meson_options.txt
inc/: meson.build  simd_funcs.h
inc/optaudio/: optaudio.h
src/: fallbacks.c  meson.build  simd_funcs.c  sse_functions_64bit.s  sse_functions_avx_linux.c
tests/: helper.h  meson.build  test.c
